Changed Base64 to be Java 7 compliant